--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,17 @@
-button,
-button:hover
+button, button:hover
 {
     padding: 10px;;
 
     color: #fff;
     border: none;
-}.chat__messages,
-.chat__sidebar ul
+}
+
+.chat__messages, .chat__sidebar ul
 {
     list-style-type: none;
-}*
+}
+
+*
 {
     font-family: HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;
     font-size: .95rem;;
@@ -18,32 +20,42 @@ button:hover
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}li,
-ul
+}
+
+li, ul 
 {
     list-style-position: inside;
-}h3
+}
+
+h3
 {
     font-size: 1.5rem;;
     font-weight: 600;
 
     text-align: center;
-}button
+}
+
+button
 {
     cursor: pointer;
     transition: background .3s ease;;
 
     background: #265f82;
-}button:hover
+}
+
+button:hover
 {
     background: #1f4c69;
-}button:disabled
+}
+
+button:disabled
 {
     cursor: default;
 
     background: #698ea5;
-}.centered-form
-{
+}
+
+.centered-form {
     display: flex;
 
     width: 100vw;
@@ -54,12 +66,13 @@ ul
     background: -webkit-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:      -o-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:     -ms-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
-    background:         linear-gradient(325deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);;
+    background:         linear-gradient(325deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
 
     align-items: center;
     justify-content: center;
-}.centered-form__form
-{
+}
+
+.centered-form__form {
     width: 230px;;
     margin: 20px;
     padding: 0 20px;
@@ -67,28 +80,33 @@ ul
     border: 1px solid #e1e1e1;
     border-radius: 5px;
     background: rgba(250,250,250,.9);
-}.form-field
-{
+}
+
+.form-field {
     margin: 20px 0;
-}.form-field > *
-{
+}
+
+.form-field > * {
     width: 100%;
-}.form-field label
-{
+}
+
+.form-field label {
     display: block;
 
     margin-bottom: 7px;
-}.form-field input,
-.form-field select
-{
+}
+
+.form-field input, .form-field select {
     padding: 10px;;
 
     border: 1px solid #e1e1e1;
-}.chat
-{
+}
+
+.chat {
     display: flex;
-}.chat__sidebar
-{
+}
+
+.chat__sidebar {
     overflow-y: scroll;
 
     width: 260px;
@@ -100,92 +118,108 @@ ul
     background:      -o-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:     -ms-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:         linear-gradient(325deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
-}.chat__footer,
-.chat__sidebar li
-{
+}
+
+.chat__footer, .chat__sidebar li {
     padding: 10px;;
 
     background: #e6eaee;
-}.chat__sidebar h3
-{
+}
+
+.chat__sidebar h3 {
     margin: 10px 20px;
 
     text-align: left;;
 
     color: #e6eaee;
-}.chat__sidebar li
-{
+}
+
+.chat__sidebar li {
     margin: 10px;;
 
     border: 1px solid #e1e1e1;
     border-radius: 5px;
-}.chat__main
-{
+}
+
+.chat__main {
     display: flex;
     flex-direction: column;
 
     width: 100%;;
     height: 100vh;
-}.chat__messages
-{
+}
+
+.chat__messages {
     overflow-y: scroll;
 
     padding: 10px;;
 
     flex-grow: 1;
     -webkit-overflow-scrolling: touch;
-}.chat__footer
-{
+}
+
+.chat__footer {
     display: flex;
 
     flex-shrink: 0;
-}.chat__footer form
-{
+}
+
+.chat__footer form {
     display: flex;;
 
     flex-grow: 1;
-}.chat__footer form *
-{
+}
+
+.chat__footer form * {
     margin-right: 10px;
-}.chat__footer input
-{
+}
+
+.chat__footer input {
     padding: 10px;
 
     border: none;
 
     flex-grow: 1;
-}.message
-{
+}
+
+.message {
     padding: 10px;
-}.message__title
-{
+}
+
+.message__title {
     display: flex;
 
     margin-bottom: 5px;
-}.message__title h4
-{
+}
+
+.message__title h4 {
     font-weight: 600;
 
     margin-right: 10px;
-}.message__title span
-{
+}
+
+.message__title span {
     color: #999;
-}@media (max-width:600px)
-{
-    *
-    {
+}
+
+@media (max-width:600px) {
+    * {
         font-size: 1rem;
-    }.chat__sidebar
-    {
+    }
+
+    .chat__sidebar {
         display: none;
-    }.chat__footer
-    {
+    }
+
+    .chat__footer {
         flex-direction: column;
-    }.chat__footer form
-    {
+    }
+
+    .chat__footer form {
         margin-bottom: 10px;
-    }.chat__footer button
-    {
+    }
+
+    .chat__footer button {
         margin-right: 0;
     }
 }
